staging: fixed alignment of footer links and social media icon

--- a/src/styles/components/footer-links.scss
+++ b/src/styles/components/footer-links.scss
@@ -23,7 +23,7 @@
     }
     &__list {
         padding: 0;
-        margin-bottom: 0;
+        margin: 0;
         li {
             display: block;
             list-style-type: none;
